<resources>
    <string name="app_name">UMBBMobGuide</string>
    <string name="exit_App" >Exit</string>
    <string name="setting_menu">Settings</string>
    <string name="aboutUs_menu">About us</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="explore_faculties">Explore Faculties</string>
    <string name="explore_faculties_desc">Explore faculties and their \ndepartments</string>
    <string name="about_university">About University</string>
    <string name="about_university_desc">Learn more about the university \nof Boumerdes</string>
    <string name="your_guide">Your guide to the university of Boumerdes</string>
    <string name="smart_companion">Smart university companion</string>
    <string name="university_overview">University Overview</string>
    <string name="students">Students</string>
    <string name="faculties">Faculties</string>
    <string name="national_rank">National Rank</string>
    <string name="contact_university">Contact University</string>
    <string name="call_university">Call University</string>
    <string name="send_email">Send Email</string>
    <string name="world_rank">World Rank</string>
    <string name="searchHint">Search here for a faculty</string>
    <string name="faculty_sciences">Faculty of Sciences</string>
    <string name="faculty_technology">Faculty of Technology</string>
    <string name="faculty_hydrocarbons">Faculty of Hydrocarbons and Chemistry</string>
    <string name="faculty_law">Faculty of Law and Political Science</string>
    <string name="faculty_letters">Faculty of Letters and Languages</string>
    <string name="faculty_economics">Faculty of Economic Sciences, Commercial Sciences, and Management Sciences</string>
    <string name="institute_electrical">Institute of Electrical and Electronic Engineering</string>
    <string name="institute_applied_tech">Institute of Applied Sciences and Technology</string>
    <string name="fs_desc">The Faculty of Sciences at M\'Hamed Bougara University of Boumerdes is recognized for scientific education and research. It provides comprehensive training in disciplines, equipping students with the knowledge and skills to address real-world challenges through scientific approaches.</string>
    <string name="ft_desc">The Faculty of Technology at M\'Hamed Bougara University of Boumerdes is recognized for technical education and applied research. It provides comprehensive training in disciplines such as Mechanical Engineering, equipping students with the knowledge and skills to address real-world challenges through technological innovation.</string>
    <string name="fhc_desc">The Faculty of Hydrocarbons and Chemistry at M\'Hamed Bougara University of Boumerdes has continuously adapted to meet the challenges of rapid technological developments in the field of Hydrocarbons. The goal is to train graduates with the knowledge and skills needed for research, development, production, or teaching.</string>
    <string name="law_desc">The Faculty of Law and Political Science at M\'Hamed Bougara University of Boumerdes provides quality education in legal studies and political sciences. The faculty is committed to training students in legal reasoning, political analysis, and civic responsibility.</string>
    <string name="fll_desc">The Faculty of Letters and Languages at M\'Hamed Bougara University of Boumerdes provides quality education in literature, linguistics, and foreign languages. The faculty is committed to developing students\' language proficiency, analytical skills, and cultural awareness.</string>
    <string name="fse_desc">The Faculty of Economic Sciences, Commercial Sciences, and Management Sciences at M\'Hamed Bougara University of Boumerdes provides quality education in economics, business, and management. The faculty is committed to developing students\' analytical, managerial, and decision-making skills.</string>
    <string name="igee_desc">The Institute of Electrical and Electronic Engineering at M\'Hamed Bougara University of Boumerdes provides quality education in electrical systems, electronic circuits, and automation. The institute is committed to developing students\' technical, analytical, and problem-solving skills.</string>
    <string name="ista_desc">The Institute of Applied Sciences and Technology (ISTA) at M\'Hamed Bougara University of Boumerdes was established in response to national concerns regarding graduate employability and integration into the socio-economic sector.</string>
    <string name="contact_faculty">Contact</string>
    <string name="call_faculty">Call Faculty</string>
    <string name="email_faculty">Send Email</string>
    <string name="location_faculty">Find Location</string>
    <string name="departments_txt">Departments</string>
    <string name="dept_maths">Department of Mathematics</string>
    <string name="dept_cs">Department of Computer Science</string>
    <string name="dept_physics">Department of Physics</string>
    <string name="dept_chemistry">Department of Chemistry</string>
    <string name="dept_biology">Department of Biology</string>
    <string name="dept_agronomy">Department of Agronomic Sciences</string>
    <string name="dept_sports">Department of STAPS (Sciences and Techniques of Physical and Sports)</string>
    <string name="dept_industrial_process">Department of Industrial Process Engineering</string>
    <string name="dept_food_tech">Department of Food Technology</string>
    <string name="dept_env_eng">Department of Environmental Engineering</string>
    <string name="dept_mech_eng">Department of Mechanical Engineering</string>
    <string name="dept_energetics">Department of Energetics</string>
    <string name="dept_maintenance">Department of Industrial Maintenance</string>
    <string name="dept_materials">Department of Materials Science and Engineering</string>
    <string name="dept_civil_eng">Department of Civil Engineering</string>
    <string name="dept_earthquake">Department of Earthquake Engineering, Geophysics, and Random Phenomena</string>
    <string name="dept_mining">Department of Mining and Petroleum Deposits</string>
    <string name="dept_transport">Department of Hydrocarbon Transportation and Equipment</string>
    <string name="dept_chem_pharm">Department of Chemical and Pharmaceutical Process Engineering</string>
    <string name="dept_automation">Department of Process Automation and Electrification</string>
    <string name="dept_econ_marketing">Department of Hydrocarbon Economics and Marketing</string>
    <string name="dept_public_law">Department of Public Law</string>
    <string name="dept_private_law">Department of Private Law</string>
    <string name="dept_political_science">Department of Political Science</string>
    <string name="dept_arabic_lit">Department of Arabic Literature</string>
    <string name="dept_french">Department of French language</string>
    <string name="dept_english">Department of English language</string>
    <string name="dept_management">Department of Management Sciences</string>
    <string name="dept_commercial">Department of Commercial Sciences</string>
    <string name="dept_econ_sci">Department of Economic Sciences</string>
    <string name="dept_finance">Department of Finance and Accounting</string>
    <string name="dept_auto_elec">Department of Automation and Electrical Engineering</string>
    <string name="dept_basic_edu">Department of Basic Education</string>
    <string name="dept_electronics">Department of Electronics</string>
    <string name="dept_mmq">Department of MMQ (Mesures, Metrology &amp; Quality)</string>
    <string name="spec_is_license">Information system (License)</string>
    <string name="spec_web_license">Web Development and Infographics (License)</string>
    <string name="spec_soft_master">Software Engineering and Information Processing (Master)</string>
    <string name="spec_ai_master">Applied Artificial Intelligence (Master)</string>
    <string name="spec_math_license">Mathematics (License)</string>
    <string name="spec_math_app_license">Applied Mathematics (License)</string>
    <string name="spec_data_license">Data Science (License)</string>
    <string name="spec_math_ana_master">Mathematical Analysis (Master)</string>
    <string name="spec_math_fin_master">Financial Mathematics (Master)</string>
    <string name="spec_stoch_master">Stochastic Modeling and Statistics (Master)</string>
    <string name="spec_opt_master">Optimization and Strategic Management (Master)</string>
    <string name="spec_phys_mat_license">Materials Physics (License)</string>
    <string name="spec_phys_rad_license">Radiation Physics (License)</string>
    <string name="spec_phys_en_license">Energetic Physics (License)</string>
    <string name="spec_phys_fun_license">Fundamental Physics (License)</string>
    <string name="spec_phys_mat_master">Materials Physics (Master)</string>
    <string name="spec_phys_en_ren_master">Energetic Physics and Renewable Energies (Master)</string>
    <string name="spec_phys_med_master">Medical Physics (Master)</string>
    <string name="spec_phys_rad_master">Radiation Physics (Master)</string>
    <string name="spec_chem_mat_license">Materials Chemistry (License)</string>
    <string name="spec_chem_org_license">Organic Chemistry (License)</string>
    <string name="spec_chem_ana_license">Analytical Chemistry (License)</string>
    <string name="spec_chem_mat_master">Materials Chemistry (Master)</string>
    <string name="spec_chem_pharm_master">Pharmaceutical Chemistry (Master)</string>
    <string name="spec_chem_env_master">Environmental Chemistry (Master)</string>
    <string name="spec_chem_ana_master">Analytical Chemistry (Master)</string>
    <string name="spec_chem_org_master">Organic Chemistry (Master)</string>
    <string name="spec_bio_health_license">Biotechnology and Health (License)</string>
    <string name="spec_bio_micro_license">Microbial Biotechnology (License)</string>
    <string name="spec_bio_plant_license">Plant Biotechnology and Plant Breeding (License)</string>
    <string name="spec_bio_food_license">Food Technology and Quality Control (License)</string>
    <string name="spec_bio_chem_license">Biochemistry (License)</string>
    <string name="spec_bio_org_license">Organism Biology (License)</string>
    <string name="spec_bio_anim_license">Animal Biology and Physiology (License)</string>
    <string name="spec_bio_mol_license">Molecular Biology (License)</string>
    <string name="spec_bio_eco_license">Ecology and Environment (License)</string>
    <string name="spec_bio_mol_path_master">Biotechnology and Molecular Pathology (Master)</string>
    <string name="spec_bio_micro_master">Microbial Biotechnology (Master)</string>
    <string name="spec_bio_plant_master">Plant Biotechnology (Master)</string>
    <string name="spec_bio_nutri_master">Nutrition and Food Science (Master)</string>
    <string name="spec_bio_app_chem_master">Applied Biochemistry (Master)</string>
    <string name="spec_bio_pop_master">Population and Organism Biology (Master)</string>
    <string name="spec_bio_genet_master">Genetics (Master)</string>
    <string name="spec_bio_cell_phys_master">Cellular Physiology and Pathophysiology (Master)</string>
    <string name="spec_bio_mol_cell_master">Molecular and Cellular Biology (Master)</string>
    <string name="spec_bio_biodiv_master">Biodiversity and Environment (Master)</string>
    <string name="spec_bio_micro_eco_master">Microbial Ecology (Master)</string>
    <string name="spec_agri_prot_license">Plant Protection (License)</string>
    <string name="spec_agri_prod_license">Crop Production (License)</string>
    <string name="spec_agri_anim_license">Animal Production (License)</string>
    <string name="spec_agri_phytopharm_master">Phytopharmacology and Plant Protection (Master)</string>
</resources>