<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main4"
    android:layoutDirection="ltr"
    >
    <!-- Here you put the rest of your current view-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- IMAGE -->
    <ImageView
        android:id="@+id/img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:layout_marginBottom="12dp"/>

    <!-- NAME -->
    <TextView
        android:textColor="@color/white"
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="8dp"/>

    <!-- DESCRIPTION -->
    <TextView
        android:textColor="@color/white"
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:justificationMode="inter_word"
        android:layout_marginBottom="16dp"/>

    <!-- DEPARTMENTS TITLE -->
    <TextView
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Departments"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <ListView
        android:id="@+id/listDepartments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"/>

    <!-- CONTACT TITLE -->
    <TextView
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_faculty"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"/>

    <!-- CALL CARD -->
    <androidx.cardview.widget.CardView
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"

        >

        <LinearLayout
            android:background="#29b224"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/call"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_faculty"
                android:textSize="16sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- EMAIL CARD -->
    <androidx.cardview.widget.CardView
        android:id="@+id/btnEmail"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:background="#c21e1d">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/email_icon"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_faculty"
                android:textSize="16sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- LOCATION CARD -->
    <androidx.cardview.widget.CardView
        android:id="@+id/btnLocation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground">

        <LinearLayout
            android:background="#1761b6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/location_map"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_faculty"
                android:textSize="16sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
</ScrollView>